[package]
name = "minituna"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
uuid = {version = "1.0.0-alpha.1", features = ["v4"]}
async-trait = "0.1.52"
once_cell = "1.9.0"
futures = "0.3"
rayon = "1.5"
serde = {version = "1.0",features = ["derive"]}
serde_json = "1.0"
